# flask

./: produtos.csv  pyproject.toml
Flask/banana/: app.py
Flask/banana/templates/: base.html  produtos.html
banana/: app.py
banana/templates/: base.html  cadastro-produto.html  gerar_cnpj.html  gerar_cpf.html  home.html  index.html  produto.html  produtos.html  validar_cnpj.html  validar_cpf.html
jubilant-system_LP3-main/: pyproject.toml
jubilant-system_LP3-main/banana/: app.py
jubilant-system_LP3-main/banana/templates/: produtos.html
